--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.7.0",
+    "three": "^0.151.3",
     "dat.gui": "^0.7.9",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
-    "three": "^0.138.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+        
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
