--- a/package.json
+++ b/package.json
@@ -4,22 +4,17 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack serve",
-    "build": "webpack"
+    "serve": "esbuild src/index.ts --bundle --sourcemap --outdir=dist --target=esnext --servedir=dist",
+    "build": "esbuild src/index.ts --bundle --minify --sourcemap --outdir=dist --target=esnext"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "three": "^0.151.3",
-    "dat.gui": "^0.7.9",
-        
-    "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2",
-    "css-loader": "^6.7.3",
-    "style-loader": "^3.3.2",
-    "html-webpack-plugin": "^5.5.0"
+  "dependencies": {
+    "esbuild": "0.19.3",
+    "lil-gui": "0.18.2",
+    "@types/three": "^0.156.0",
+    "three": "^0.156.1",
+    "typescript": "^5.2.2"
   }
 }
